--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -61,6 +61,7 @@ tbody{
 	position: absolute;
 	height: 0%;
 	width: 0%;
+	z-index: -3;
 }
 
 .imgform{
@@ -117,6 +118,8 @@ tbody{
 	opacity: 0;
 	height: 0;
 	width: 0;
+	position: absolute;
+	z-index: -2;
 }
 
 .previewdiv{
