--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -98,7 +98,8 @@
       
       </div>
     </section>
-    <script src="javascripts/common.js"></script>
+    <script src="../javascripts/courses.js"></script>
+    <script src="../javascripts/common.js"></script>
     <%- include('./layout/footer') %>
   </body>
 </html>
