--- a/views/coursesIIT&Medical.ejs
+++ b/views/coursesIIT&Medical.ejs
@@ -126,6 +126,8 @@ This program focuses on strengthening the students conceptual clarity of the fun
     <a href="/contactus"><button class="enroll">Enroll Now!</button></a>
 
     <%- include('./layout/footer') %>
+    <script src="javascripts/common.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="../javascripts/courses.js"></script>
   </body>
 </html>
