--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -86,6 +86,52 @@
           </p>
         </div>
       </section>
+      <section class="gallery">
+        <h1 style="padding:30px 0px;text-align: center;color: #568036;font-size: 40px;"><b>GALLERY</b></h1>
+        <div class="container" data-autoplay="true">
+          <div class="slide"> <img
+                  src="images/aboutus/Gallery1.jpg"
+                  alt="nature" /></div>
+          <div class="slide">
+              <img src="images/aboutus/Gallery2.jpg"
+                  alt="nature" />
+          </div>
+          <div class="slide">
+              <img src="images/aboutus/Gallery3.jpg"
+                  alt="nature" />
+          </div>
+          <div class="slide">
+              <img src="images/aboutus/Gallery4.jpg"
+                  alt="nature" />
+          </div>
+          <div class="slide">
+            <img src="images/aboutus/Gallery5.jpg"
+                alt="nature" />
+          </div>
+          <div class="slide">
+            <img src="images/aboutus/Gallery6.jpg"
+              alt="nature" />
+          </div>
+          <div class="slide">
+            <img src="images/aboutus/Gallery7.jpg"
+            alt="nature" />
+          </div>
+          <div class="slide">
+            <img src="images/aboutus/Gallery8.jpg"
+            alt="nature" />
+            </div>
+          <div class="slide">
+            <img src="images/aboutus/Gallery9.jpg"
+            alt="nature" />
+          </div>
+  
+          <button class="prev" onclick="prev()"><i class="fa fa-angle-left"></i></button>
+          <button class="next" onclick="next()"><i class="fa fa-angle-right"></i></button>
+  
+  
+      </div>
+      <div class="dots_container" id="indicator"></div>
+      </section>
     <section class="app">
       <div class="apppage">
         <img src="images/aboutus/phonebg.png" class="Messaging">
@@ -99,6 +145,7 @@
       </div>
     </section>
     <script src="javascripts/common.js"></script>
+    <script src="javascripts/aboutus.js"></script>
     <%- include('./layout/footer') %>
   </body>
 </html>
