--- a/views/layout/adminSideBar.ejs
+++ b/views/layout/adminSideBar.ejs
@@ -15,7 +15,7 @@
           </ul>
         </div>
       </li>
-      <li class="mb-4">
+      <!-- <li class="mb-4">
         <button class="btn btn-toggle align-items-center rounded collapsed fs-5" data-bs-toggle="collapse" data-bs-target="#courses-collapse" aria-expanded="false">
           <b>Courses</b> 
         </button>
@@ -26,7 +26,7 @@
             <li><a href="/admin/courses/iit&medical" class="link-dark rounded ahover">Courses-IIT&Medical</a></li>
           </ul>
         </div>
-      </li>
+      </li> -->
       <li class="mb-4">
         <button class="btn btn-toggle align-items-center rounded collapsed fs-5" data-bs-toggle="collapse" data-bs-target="#about-collapse" aria-expanded="false">
           <b>About Us</b> 
@@ -70,7 +70,7 @@
           </ul>
         </div>
       </li>
-      <li class="mb-4">
+      <!-- <li class="mb-4">
         <button class="btn btn-toggle align-items-center rounded collapsed fs-5" data-bs-toggle="collapse" data-bs-target="#contact-collapse" aria-expanded="false">
            <b>Contact Us</b> 
         </button>
@@ -81,7 +81,7 @@
             <li><a href="#" class="link-dark rounded ahover">Message</a></li>
           </ul>
         </div>
-      </li>
+      </li> -->
       
     </ul>
   </div>
