--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -98,8 +98,9 @@
       
       </div>
     </section>
-    <script src="../javascripts/courses.js"></script>
-    <script src="../javascripts/common.js"></script>
+    
+    
     <%- include('./layout/footer') %>
+    <script src="javascripts/common.js"></script>
   </body>
 </html>
