--- a/views/coursesJEE.ejs
+++ b/views/coursesJEE.ejs
@@ -199,8 +199,8 @@ Course Methodology
     <%- include('./layout/footer') %>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="../javascripts/courses.js"></script>
     <script src="javascripts/common.js"></script>
+    <script src="javascripts/courses.js"></script>
     
   </body>
 </html>
