--- a/views/home.ejs
+++ b/views/home.ejs
@@ -319,9 +319,9 @@
 						<img class="profile" src="<%= topper.studentimg %>" alt="" />
 					
 					
-						<h3 class=""><%= topper.name %> </h2>
-						<h3 class=""><%= topper.collegename %> </p>
-						
+						<h3 class="nameNew"><%= topper.name %> </h2>
+						<h3 class="colNew"><%= topper.collegename %> </h3>
+						<h3 class="markNew">680/720</h3>
 					
 				
 				</div>
@@ -336,7 +336,7 @@
 		
 			
 		
-			<section class="stats">
+		<section class="stats">
 				<!-- <div class="stats-details">
 					
 					<div class="stat1 stat">
@@ -416,7 +416,7 @@
 			crossorigin="anonymous"
 		></script>
 		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-		<script src="javascripts/index.js"></script>
+		<!-- <script src="javascripts/index.js"></script> -->
 		<script src="javascripts/common.js"></script>
 	</body>
 </html>
