--- a/views/coursesIIT&Medical.ejs
+++ b/views/coursesIIT&Medical.ejs
@@ -127,7 +127,8 @@ This program focuses on strengthening the students conceptual clarity of the fun
 
     <%- include('./layout/footer') %>
     <script src="javascripts/common.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="../javascripts/courses.js"></script>
+    <script src="javascripts/courses.js"></script>
+    
+    
   </body>
 </html>
