--- a/views/admin/results/studentdetails.ejs
+++ b/views/admin/results/studentdetails.ejs
@@ -83,7 +83,7 @@
 								class="btn btn-outline-secondary px-3 mt-5 me-5 backbtn"
 							>
 								Back
-							</button>
+							</button>/
 							<button type="submit" class="btn btn-outline-primary mt-5">
 								submit
 							</button>
