--- a/views/results.ejs
+++ b/views/results.ejs
@@ -37,84 +37,84 @@
 
     <section class="section2">
       <div class="gridcontainer">
-        <div class="griditem1 gridbox">
+        <div class="griditem1 gridbox gridanime1">
           <img src="images/Result/image1.png" alt="studentimg1" />
           <span class="griditem1span"
             ><h3>Maya,Neet</h3>
             <p>715/720</p></span
           >
         </div>
-        <div class="griditem2 gridbox">
+        <div class="griditem2 gridbox gridanime2">
           <img src="images/Result/image2.png" alt="studentimg2" />
           <span class="griditem2span"
             ><h3>Bharath,Neet</h3>
             <p>710/720</p></span
           >
         </div>
-        <div class="griditem3 gridbox">
+        <div class="griditem3 gridbox gridanime1">
           <img src="images/Result/image3.png" alt="studentimg3" />
           <span class="griditem3span"
             ><h3>Max,Neet</h3>
             <p>700/720</p></span
           >
         </div>
-        <div class="griditem4 gridbox">
+        <div class="griditem4 gridbox gridanime2">
           <img src="images/Result/image4.png" alt="studentimg4" />
           <span class="griditem4span"
             ><h3>Anu,Neet</h3>
             <p>659/720</p></span
           >
         </div>
-        <div class="griditem5 gridbox">
+        <div class="griditem5 gridbox gridanime1">
           <img src="images/Result/image5.png" alt="studentimg5" />
           <span class="griditem5span"
             ><h3>Bhuvana,Neet</h3>
             <p>700/720</p></span
           >
         </div>
-        <div class="griditem6 gridbox">
+        <div class="griditem6 gridbox gridanime2">
           <img src="images/Result/image6.png" alt="studentimg6" />
           <span class="griditem6span"
             ><h3>David,Neet</h3>
             <p>650/720</p></span
           >
         </div>
-        <div class="griditem7 gridbox">
+        <div class="griditem7 gridbox gridanime1">
           <img src="images/Result/image7.png" alt="studentimg7" />
           <span class="griditem7span"
             ><h3>Gokul,Neet</h3>
             <p>655/720</p></span
           >
         </div>
-        <div class="griditem8 gridbox">
+        <div class="griditem8 gridbox gridanime2">
           <img src="images/Result/image8.png" alt="studentimg8" />
           <span class="griditem8span"
             ><h3>Jaya,Neet</h3>
             <p>600/720</p></span
           >
         </div>
-        <div class="griditem9 gridbox">
+        <div class="griditem9 gridbox gridanime1">
           <img src="images/Result/image5.png" alt="studentimg7" />
           <span class="griditem7span"
             ><h3>Gee,Neet</h3>
             <p>655/720</p></span
           >
         </div>
-        <div class="griditem10 gridbox">
+        <div class="griditem10 gridbox gridanime2">
           <img src="images/Result/image3.png" alt="studentimg7" />
           <span class="griditem7span"
             ><h3>Varsha,Neet</h3>
             <p>655/720</p></span
           >
         </div>
-        <div class="griditem11 gridbox">
+        <div class="griditem11 gridbox gridanime1">
           <img src="images/Result/image1.png" alt="studentimg7" />
           <span class="griditem7span"
             ><h3>Pavithra,Neet</h3>
             <p>680/720</p></span
           >
         </div>
-        <div class="griditem12 gridbox">
+        <div class="griditem12 gridbox gridanime2">
           <img src="images/Result/image3.png" alt="studentimg7" />
           <span class="griditem7span"
             ><h3>Akash,Neet</h3>
