--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -285,7 +285,7 @@
 }
 .calenderContent {
   text-align: center;
-
+ 
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -295,6 +295,8 @@
   font-size: 16px;
   margin-bottom: 0rem !important;
   font-weight: 600;
+   /* word-wrap: break-word;
+  width: 90%; */
 }
 .date {
   background: #2b72e4;
@@ -374,7 +376,7 @@ p {
   margin: 2rem 0rem;
   line-height: 2rem;
   border-radius: 20px;
-  background-color: #ffffff98;
+  background-color: white;
   text-decoration: none;
 }
 .news-box .section2 .div-1 img {
@@ -785,12 +787,24 @@ p {
 
 .neet-2020-toppers {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   margin: 1rem 0rem 3rem 0rem;
   position: relative;
 }
+.ribbon {
+  position: absolute;
+  z-index: 0;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 100%;
 
+}
+.ribbon:hover {
+  display: none;
+}
 .neet-2020-toppers img {
   position: absolute;
   width: 20%;
@@ -799,14 +813,16 @@ p {
 }
 
 .neet-2020-toppers-a {
+  background: url('https://giphy.com/embed/l1J9EQhfkb8tPu836') center/cover;
   position: relative;
   margin-top: 3rem;
   border-radius: 50px;
   padding: 0.5rem 5rem;
   border: 1px solid black;
   font-size: 2rem;
-  background-color: rgba(255, 255, 255, 0.849);
+  /* background-color: rgba(255, 255, 255, 0.849); */
   box-shadow: 2px 2px 60px rgba(0, 0, 0, 0.2);
+  z-index: 5;
 }
 
 .neet-2020-toppers-a a {
@@ -1142,9 +1158,26 @@ p {
   height: 50vh !important;
 
 }
-
+.toppersDiv {
+  position: relative;
+  top: 15%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  
+}
+.toppersDiv p  {
+  margin-top: 1rem;
+  font-weight: 600;
+}
+.markNew {
+  background-color: white;
+  padding: .5rem 1rem;
+  border-radius: 20px 0px 20px 0px;
+}
 .mySwiper1 .swiper-slide {
-  width: 20rem !important;
+  width: 20rem!important;
   height: 18rem !important;
   background: linear-gradient(#369afe,#60efffda);
   position: relative;
@@ -1198,19 +1231,23 @@ p {
   top: 61%;
   /* transform: translateY(-50%); */
   right: 8% !important;
+  transform: scale(1.5);
+  
+  font-weight: 1000 !important;
+  /* background: #02c3d8; */
 }
 .arrowprev1 {
   
   position: absolute;
   top: 61%;
-  /* transform: translateY(-50%); */
   left: 8% !important;
+  transform: scale(1.5);
+  font-weight: 1000 !important;
 }
 .arrownext2 {
   color: #02c3d8;
   position: absolute;
   top: 82.5%;
-  /* transform: translateY(-50%); */
   right: 3% !important;
 }
 .arrowprev2 {
@@ -1313,12 +1350,7 @@ p {
   position: relative;
   
 }
-.nameNew {
-  margin: 0rem 0rem
-}
-.colNew {
-  margin: 1rem 0rem !important
-}
+
 .card {
   /* height: 360px;
   width: 340px;
@@ -1393,17 +1425,7 @@ p {
   font-size: 18px;
   font-weight: 500;
 }
-.markNew {
-  width: 30%;
-  background: white;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: .5rem;
-  margin-bottom: 1rem;
-  padding: .5rem 1rem;
-  border-radius: 20px 0px 20px 0px;
-  box-shadow: 2px 2px 50px rgba(0, 0, 0, 0.2)
-}
+
 .marks {
   font-size: 18px;
   font-weight: 600;
@@ -1919,7 +1941,9 @@ iframe {
   .neet-2020-toppers-a {
     font-size: 1.3rem;
   }
-  
+  .mySwiper1 {
+    width: 77.7% !important;
+  }
   .Stat h1 {
     font-size: 2.2rem;
   }
