--- a/views/home.ejs
+++ b/views/home.ejs
@@ -305,11 +305,17 @@
 			</div>
 	</section> -->
 	<div class="neet-2020-toppers">
-		<img src="images/home/Vector.svg" alt="SVG" />
+		
+		<!-- <img src="images/home/Vector.svg" alt="SVG" /> -->
 		<div class="neet-2020-toppers-a">
 			<a href="/">Our Results - Neet 2020 Toppers</a>
+			<img src="https://img.icons8.com/plumpy/50/000000/sparkling--v2.png" style="height: 30px; width: 30px;"/>
 		</div>
-	</div>		
+		
+		
+		<!-- <iframe class='ribbon' src="https://giphy.com/embed/3ohhwzIw3bISRhQWME" width="480" height="320" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/stickers/explosion-confetti-3ohhwzIw3bISRhQWME"></a></p> -->
+	</div>
+	<marquee behavior="" direction="left"></marquee>		
         <section class="swiper swiper1 mySwiper1">
           <div class="swiper-wrapper">
 			  <% ourtoppers.forEach(topper => { %>
@@ -318,10 +324,14 @@
 					
 						<img class="profile" src="<%= topper.studentimg %>" alt="" />
 					
-					
-						<h3 class="nameNew"><%= topper.name %> </h2>
-						<h3 class="colNew"><%= topper.collegename %> </h3>
-						<h3 class="markNew">680/720</h3>
+						<div class="toppersDiv">
+
+							<p class="nameNew"><%= topper.name %> </p>
+							<p class="colNew"><%= topper.collegename %> </p>
+							<p class="markNew">680/720</p>
+
+						</div>
+						
 					
 				
 				</div>
