--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -124,7 +124,13 @@ ul {
     left: 0%;
   }
 }
+body {
+  overflow-x: hidden;
+}
 @media (max-width:1000px) {
+  .navlinks {
+    display: none;
+  }
   .hamburger {
     display: block;
     cursor: pointer;
@@ -146,9 +152,7 @@ ul {
   .body {
     overflow-y: hidden;
   }
-  body {
-    overflow-x: hidden;
-  }
+  
 
   
   .navlinks li {
@@ -322,9 +326,7 @@ footer {
   .footer_head {
     margin-top: 5%;
   }
-  .navlinks {
-    /* display: none; */
-  }
+  
 }
 @media (max-width: 400px) {
   .social {
