--- a/views/coursesIIT&Medical.ejs
+++ b/views/coursesIIT&Medical.ejs
@@ -126,6 +126,9 @@ This program focuses on strengthening the students conceptual clarity of the fun
     <a href="/contactus"><button class="enroll">Enroll Now!</button></a>
 
     <%- include('./layout/footer') %>
-    <script src="../javascripts/courses.js"></script>
+    <script src="javascripts/common.js"></script>
+    <script src="javascripts/courses.js"></script>
+    
+    
   </body>
 </html>
