--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -285,7 +285,7 @@
 }
 .calenderContent {
   text-align: center;
-
+ 
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -295,6 +295,8 @@
   font-size: 16px;
   margin-bottom: 0rem !important;
   font-weight: 600;
+   /* word-wrap: break-word;
+  width: 90%; */
 }
 .date {
   background: #2b72e4;
@@ -374,7 +376,7 @@ p {
   margin: 2rem 0rem;
   line-height: 2rem;
   border-radius: 20px;
-  background-color: #ffffff98;
+  background-color: white;
   text-decoration: none;
 }
 .news-box .section2 .div-1 img {
@@ -785,12 +787,24 @@ p {
 
 .neet-2020-toppers {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 3rem 0px;
+  margin: 1rem 0rem 3rem 0rem;
   position: relative;
 }
+.ribbon {
+  position: absolute;
+  z-index: 0;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 100%;
 
+}
+.ribbon:hover {
+  display: none;
+}
 .neet-2020-toppers img {
   position: absolute;
   width: 20%;
@@ -799,14 +813,16 @@ p {
 }
 
 .neet-2020-toppers-a {
+  background: url('https://giphy.com/embed/l1J9EQhfkb8tPu836') center/cover;
   position: relative;
   margin-top: 3rem;
   border-radius: 50px;
   padding: 0.5rem 5rem;
   border: 1px solid black;
   font-size: 2rem;
-  background-color: rgba(255, 255, 255, 0.849);
+  /* background-color: rgba(255, 255, 255, 0.849); */
   box-shadow: 2px 2px 60px rgba(0, 0, 0, 0.2);
+  z-index: 5;
 }
 
 .neet-2020-toppers-a a {
@@ -820,7 +836,7 @@ p {
   background: url("../images/home/stats_bg_img.jpg");
   background-size: cover;
   background-position: 0px 54%;
-  margin-top: 6rem;
+  margin-top: 5rem;
   position: relative;
   display: flex;
 }
@@ -1138,19 +1154,39 @@ p {
   /* justify-content: space-around !important; */
 }
 .mySwiper1 {
-  width: 85% !important;
-  height: 60vh !important;
-}
+  width: 67.7% !important;
+  height: 50vh !important;
 
+}
+.toppersDiv {
+  position: relative;
+  top: 15%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  
+}
+.toppersDiv p  {
+  margin-top: 1rem;
+  font-weight: 600;
+}
+.markNew {
+  background-color: white;
+  padding: .5rem 1rem;
+  border-radius: 20px 0px 20px 0px;
+}
 .mySwiper1 .swiper-slide {
-  width: 22.82rem !important;
-  height: 16rem !important;
-  padding: 20px;
+  width: 20rem!important;
+  height: 18rem !important;
+  background: linear-gradient(#369afe,#60efffda);
+  position: relative;
+  border-radius: 10px;
+  
   text-align: center;
   font-size: 18px;
-  background: #ffffffea;
-  border-radius: 30px 0 30px 0;
-  margin-right: 34px !important;
+  top: 22%;
+  margin: 0rem 1rem !important;
   /* Center slide text vertically */
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1166,26 +1202,52 @@ p {
   -webkit-align-items: center;
   align-items: center;
 }
-
+.mySwiper2 .swiper-slide {
+  width: 25.5rem !important;
+  height: 16rem !important;
+  padding: 20px;
+  text-align: center;
+  font-size: 18px;
+  background: #02c3d8;
+  border-radius: 30px 0 30px 0;
+  margin-right: 34px !important;
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
 .arrownext1 {
-  color: rgb(255, 255, 255);
+  
   position: absolute;
-  top: 60%;
+  top: 61%;
   /* transform: translateY(-50%); */
-  right: 4% !important;
+  right: 8% !important;
+  transform: scale(1.5);
+  
+  font-weight: 1000 !important;
+  /* background: #02c3d8; */
 }
 .arrowprev1 {
-  color: rgb(255, 255, 255);
+  
   position: absolute;
-  top: 60%;
-  /* transform: translateY(-50%); */
-  left: 4% !important;
+  top: 61%;
+  left: 8% !important;
+  transform: scale(1.5);
+  font-weight: 1000 !important;
 }
 .arrownext2 {
   color: #02c3d8;
   position: absolute;
   top: 82.5%;
-  /* transform: translateY(-50%); */
   right: 3% !important;
 }
 .arrowprev2 {
@@ -1210,36 +1272,28 @@ p {
   height: 100vh;
 }
 
-.mySwiper2 .swiper-slide {
-  width: 25.5rem !important;
-  height: 16rem !important;
-  padding: 20px;
-  text-align: center;
-  font-size: 18px;
-  background: #02c3d8;
-  border-radius: 30px 0 30px 0;
-  margin-right: 34px !important;
-  /* Center slide text vertically */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-}
+
 
 .imghead img {
   width: 50px;
   height: 50px;
   border-radius: 50%;
 }
-
+.secMain {
+  display: grid;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  grid-template-columns: repeat(3,1fr);
+}
+.cardTopper {
+  height: 360px;
+  width: 340px;
+  background: linear-gradient(#369afe,#60efffda);
+  position: relative;
+  box-shadow: 5px 5px 50px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
 /* .mySwiper2 .swiper-slide img {
   display: block;
   width: 100%;
@@ -1279,6 +1333,40 @@ p {
   border-radius: 20px;
   /* background-color: white; */
   background-color: rgb(255, 255, 255);
+}
+.imgTopper {
+  position: absolute;
+  left: 50%;
+  top: 0%;
+  transform: translate(-50%,-40%);
+  width: 180px; 
+  background-color: #106dff;
+}
+.swiper1 h3 {
+  font-weight: 600;
+  text-align: center;
+  top: 20%;
+  font-size: 1.1rem;
+  position: relative;
+  
+}
+
+.card {
+  /* height: 360px;
+  width: 340px;
+  background: linear-gradient(#369afe,#60efffda);
+  position: relative;
+  box-shadow: 5px 5px 50px rgba(0, 0, 0, 0.2);
+  border-radius: 10px; */
+}
+.profile {
+  position: absolute;
+  left: 50%;
+  top: 0%;
+  transform: translate(-50%,-40%);
+  width: 180px; 
+  border-radius: 50%;
+  border: 2px solid black;
 }
 .topperImg {
   /* background-color:#A2D2FF; */
@@ -1337,6 +1425,7 @@ p {
   font-size: 18px;
   font-weight: 500;
 }
+
 .marks {
   font-size: 18px;
   font-weight: 600;
@@ -1852,7 +1941,9 @@ iframe {
   .neet-2020-toppers-a {
     font-size: 1.3rem;
   }
-  
+  .mySwiper1 {
+    width: 77.7% !important;
+  }
   .Stat h1 {
     font-size: 2.2rem;
   }
