--- a/views/coursesJEE.ejs
+++ b/views/coursesJEE.ejs
@@ -197,6 +197,10 @@ Course Methodology
     <a href="/contactus"><button class="enroll">Enroll Now!</button></a>
 
     <%- include('./layout/footer') %>
-    <script src="../javascripts/courses.js"></script>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="javascripts/common.js"></script>
+    <script src="javascripts/courses.js"></script>
+    
   </body>
 </html>
