--- a/views/home.ejs
+++ b/views/home.ejs
@@ -304,40 +304,49 @@
 				</div>
 			</div>
 	</section> -->
-			<section class="bgTopper" >
-				<div class="neet-2020-toppers">
-					<img src="images/home/Vector.svg" alt="SVG" />
-					<div class="neet-2020-toppers-a">
-						<a href="/">Our Results - Neet 2020 Toppers</a>
-					</div>
-				</div>
+	<div class="neet-2020-toppers">
+		
+		<!-- <img src="images/home/Vector.svg" alt="SVG" /> -->
+		<div class="neet-2020-toppers-a">
+			<a href="/">Our Results - Neet 2020 Toppers</a>
+			<img src="https://img.icons8.com/plumpy/50/000000/sparkling--v2.png" style="height: 30px; width: 30px;"/>
+		</div>
+		
+		
+		<!-- <iframe class='ribbon' src="https://giphy.com/embed/3ohhwzIw3bISRhQWME" width="480" height="320" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/stickers/explosion-confetti-3ohhwzIw3bISRhQWME"></a></p> -->
+	</div>
+	<marquee behavior="" direction="left"></marquee>		
         <section class="swiper swiper1 mySwiper1">
           <div class="swiper-wrapper">
 			  <% ourtoppers.forEach(topper => { %>
 				<div class="swiper-slide">
-					<section class="topperCard">
-					<div class="topperImg2">
-						<img src="<%= topper.studentimg %>" alt="" />
-					</div>
-					<div class="topperContent">
-						<h2 class="name"><%= topper.name %> </h2>
-						<p class="college"><%= topper.collegename %> </p>
-						<!-- <div class="markFlex">
-							<h4 class="score">Neet score</h4>
-							<p class="marks">644/720</p>
-						</div> -->
-					</div>
-				</section>   
+					
+					
+						<img class="profile" src="<%= topper.studentimg %>" alt="" />
+					
+						<div class="toppersDiv">
+
+							<p class="nameNew"><%= topper.name %> </p>
+							<p class="colNew"><%= topper.collegename %> </p>
+							<p class="markNew">680/720</p>
+
+						</div>
+						
+					
+				
 				</div>
 			  <% }) %>
           </div>
+		  
 
         </section>
-			<div class="swiper-button-next arrownext1"></div>
+		<div class="swiper-button-next arrownext1"></div>
           	<div class="swiper-button-prev arrowprev1"></div>
+			
 		
-			</section>
-			<section class="stats">
+			
+		
+		<section class="stats">
 				<!-- <div class="stats-details">
 					
 					<div class="stat1 stat">
@@ -417,7 +426,7 @@
 			crossorigin="anonymous"
 		></script>
 		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-		<script src="javascripts/index.js"></script>
+		<!-- <script src="javascripts/index.js"></script> -->
 		<script src="javascripts/common.js"></script>
 	</body>
 </html>
